--- a/pages/about.html
+++ b/pages/about.html
@@ -9,9 +9,10 @@
     <title>About</title>
 
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/theme/css/poole.css"/>
+<link rel="stylesheet" href="/theme/css/poole.css"/>
     <link rel="stylesheet" href="/theme/css/syntax.css"/>
     <link rel="stylesheet" href="/theme/css/lanyon.css"/>
+	<link rel="stylesheet" href="/theme/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <link rel="stylesheet" href="/theme/css/styles.css"/>
   </head>
@@ -29,10 +30,12 @@ styles, `#sidebar-checkbox` for behavior. -->
   </div>
 
   <nav class="sidebar-nav">
-  <a class="sidebar-nav-item" href="/">All</a>
 
       <a class="sidebar-nav-item" href="/category/life.html">Life</a>
       <a class="sidebar-nav-item" href="/category/study.html">Study</a>
+  
+  <a class="sidebar-nav-item" href="/tags.html">Tags</a>
+  <a class="sidebar-nav-item" href="/archives.html">Archives</a>
 
   </nav>
 
@@ -41,7 +44,7 @@ styles, `#sidebar-checkbox` for behavior. -->
     <a href="https://twitter.com/">&copy; @</a> 2017
     </p>
     <p class="tiny-note">
-      <a class="muted" href="https://github.com/thomaswilley/pelicanyan">pelicanyan v0.1</a>
+      Theme based on <a class="muted" href="https://github.com/thomaswilley/pelicanyan">Lanyon</a>
     </p>
   </div>
 </div>    <div class="wrap">
@@ -93,6 +96,16 @@ styles, `#sidebar-checkbox` for behavior. -->
             }, false);
             })(document);
       </script>
+      <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-42580598-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
+       </script>
      </div>
   </body>
 </html>
