--- a/lie-derivatives-and-covariant-derivatives.html
+++ b/lie-derivatives-and-covariant-derivatives.html
@@ -10,9 +10,10 @@
 
     <meta charset="utf-8" />
     <link href="/feeds/study.atom.xml" type="application/atom+xml" rel="alternate" title="Kane's Blog Categories Atom Feed" />
-    <link rel="stylesheet" href="/theme/css/poole.css"/>
+<link rel="stylesheet" href="/theme/css/poole.css"/>
     <link rel="stylesheet" href="/theme/css/syntax.css"/>
     <link rel="stylesheet" href="/theme/css/lanyon.css"/>
+	<link rel="stylesheet" href="/theme/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <link rel="stylesheet" href="/theme/css/styles.css"/>
 
@@ -35,10 +36,12 @@ styles, `#sidebar-checkbox` for behavior. -->
   </div>
 
   <nav class="sidebar-nav">
-  <a class="sidebar-nav-item" href="/">All</a>
 
       <a class="sidebar-nav-item" href="/category/life.html">Life</a>
       <a class="sidebar-nav-item" href="/category/study.html">Study</a>
+  
+  <a class="sidebar-nav-item" href="/tags.html">Tags</a>
+  <a class="sidebar-nav-item" href="/archives.html">Archives</a>
 
   </nav>
 
@@ -47,7 +50,7 @@ styles, `#sidebar-checkbox` for behavior. -->
     <a href="https://twitter.com/">&copy; @</a> 2017
     </p>
     <p class="tiny-note">
-      <a class="muted" href="https://github.com/thomaswilley/pelicanyan">pelicanyan v0.1</a>
+      Theme based on <a class="muted" href="https://github.com/thomaswilley/pelicanyan">Lanyon</a>
     </p>
   </div>
 </div>    <div class="wrap">
@@ -222,6 +225,22 @@ Then we get
 </script>
   </div>
 </div>
+<hr>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'bczhu'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript class="text-muted">
+  Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+</noscript>
       </div>
 
       <label for="sidebar-checkbox" class="sidebar-toggle"></label>
@@ -256,6 +275,16 @@ Then we get
             }, false);
             })(document);
       </script>
+      <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-42580598-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
+       </script>
      </div>
   </body>
 </html>
