--- a/archives.html
+++ b/archives.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/theme/css/poole.css"/>
     <link rel="stylesheet" href="/theme/css/syntax.css"/>
     <link rel="stylesheet" href="/theme/css/lanyon.css"/>
-	<link rel="stylesheet" href="///cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" href="/theme/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <link rel="stylesheet" href="/theme/css/styles.css"/>
   </head>
@@ -60,8 +60,8 @@ styles, `#sidebar-checkbox` for behavior. -->
 <h1>Archives for Kane's Blog</h1>
 
 <dl>
-    <dt>周二 01 八月 2017</dt>
-    <dd><a href="/welcome-to-leanote-huan-ying-lai-dao-leanote.html">Welcome to Leanote! 欢迎来到Leanote!</a></dd>
+    <dt>周日 08 一月 2017</dt>
+    <dd><a href="/zhi-yi-xiao-shi-zhi-ren.html">致易消逝之人</a></dd>
     <dt>周日 18 九月 2016</dt>
     <dd><a href="/liang-hua-xiang-guan-zi-liao.html">量化相关资料</a></dd>
     <dt>周三 18 五月 2016</dt>
