--- a/tags.html
+++ b/tags.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/theme/css/poole.css"/>
     <link rel="stylesheet" href="/theme/css/syntax.css"/>
     <link rel="stylesheet" href="/theme/css/lanyon.css"/>
-	<link rel="stylesheet" href="///cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" href="/theme/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <link rel="stylesheet" href="/theme/css/styles.css"/>
   </head>
@@ -58,14 +58,13 @@ styles, `#sidebar-checkbox` for behavior. -->
 
       <div class="container content">
     <h1>Tags for Kane's Blog</h1>        <li><a href="/tag/bian-cheng-xiang-guan.html">编程相关</a> (1)</li>
-        <li><a href="/tag/cheng-chang.html">成长</a> (1)</li>
+        <li><a href="/tag/cheng-chang.html">成长</a> (2)</li>
         <li><a href="/tag/du-shu-bi-ji.html">读书笔记</a> (1)</li>
         <li><a href="/tag/ji-qi-xue-xi.html">机器学习</a> (1)</li>
-        <li><a href="/tag/leanote.html">Leanote</a> (1)</li>
         <li><a href="/tag/nao-shen-jing-ke-xue.html">脑神经科学</a> (1)</li>
         <li><a href="/tag/qft.html">QFT</a> (1)</li>
         <li><a href="/tag/ren-gong-zhi-neng.html">人工智能</a> (1)</li>
-        <li><a href="/tag/sheng-huo.html">生活</a> (2)</li>
+        <li><a href="/tag/sheng-huo.html">生活</a> (3)</li>
         <li><a href="/tag/shu-xue.html">数学</a> (1)</li>
         <li><a href="/tag/wu-li.html">物理</a> (1)</li>
         <li><a href="/tag/xin-li-xue.html">心理学</a> (1)</li>
