--- a/ji-qi-xue-xi-xiang-guan-zi-liao.html
+++ b/ji-qi-xue-xi-xiang-guan-zi-liao.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="/theme/css/poole.css"/>
     <link rel="stylesheet" href="/theme/css/syntax.css"/>
     <link rel="stylesheet" href="/theme/css/lanyon.css"/>
-	<link rel="stylesheet" href="///cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" href="/theme/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <link rel="stylesheet" href="/theme/css/styles.css"/>
 
