--- a/archives.html
+++ b/archives.html
@@ -60,6 +60,8 @@ styles, `#sidebar-checkbox` for behavior. -->
 <h1>Archives for Kane's Blog</h1>
 
 <dl>
+    <dt>周五 02 二月 2018</dt>
+    <dd><a href="/bei-xie-si-da-nao.html">贝叶斯大脑</a></dd>
     <dt>周日 08 一月 2017</dt>
     <dd><a href="/zhi-yi-xiao-shi-zhi-ren.html">致易消逝之人</a></dd>
     <dt>周日 18 九月 2016</dt>
