--- a/tags.html
+++ b/tags.html
@@ -63,11 +63,12 @@ styles, `#sidebar-checkbox` for behavior. -->
         <li><a href="/tag/ji-qi-xue-xi.html">机器学习</a> (1)</li>
         <li><a href="/tag/nao-shen-jing-ke-xue.html">脑神经科学</a> (1)</li>
         <li><a href="/tag/qft.html">QFT</a> (1)</li>
-        <li><a href="/tag/ren-gong-zhi-neng.html">人工智能</a> (1)</li>
+        <li><a href="/tag/ren-gong-zhi-neng.html">人工智能</a> (2)</li>
+        <li><a href="/tag/ren-zhi-ke-xue.html">认知科学</a> (1)</li>
         <li><a href="/tag/sheng-huo.html">生活</a> (3)</li>
         <li><a href="/tag/shu-xue.html">数学</a> (1)</li>
         <li><a href="/tag/wu-li.html">物理</a> (1)</li>
-        <li><a href="/tag/xin-li-xue.html">心理学</a> (1)</li>
+        <li><a href="/tag/xin-li-xue.html">心理学</a> (2)</li>
         <li><a href="/tag/xue-xi.html">学习</a> (1)</li>
         <li><a href="/tag/za-tan.html">杂谈</a> (1)</li>
       </div>
