--- a/ji-qi-xue-xi-xiang-guan-zi-liao.html
+++ b/ji-qi-xue-xi-xiang-guan-zi-liao.html
@@ -77,6 +77,7 @@ styles, `#sidebar-checkbox` for behavior. -->
 <li>Stanford公开课：<a href="http://web.stanford.edu/class/cs246/handouts.html">Mining Massive Data Sets</a></li>
 <li>Berkeley cs: <a href="http://www.cs.berkeley.edu/~jordan/courses/260-spring10/">Bayesian Modeling and Inference</a></li>
 <li>Stanford <a href="http://cs231n.stanford.edu/">CS231n: Convolutional Neural Networks for Visual Recognition</a>,<a href="http://cs231n.github.io/">Notes</a></li>
+<li>Stanford <a href="http://web.stanford.edu/class/cs224n/">CS224n: Natural Language Processing with Deep Learning</a></li>
 <li>课程：<a href="http://www.cs.toronto.edu/~rgrosse/csc321/calendar.html">Introduction to Neural Networks</a></li>
 <li><a href="http://www.cs.haifa.ac.il/~rita/uml_course/course_contents.html">Unsupervised Learning</a></li>
 <li><a href="http://varianceexplained.org/RData/">Rdata</a></li>
