--- a/bei-xie-si-da-nao.html
+++ b/bei-xie-si-da-nao.html
@@ -76,7 +76,7 @@ styles, `#sidebar-checkbox` for behavior. -->
 <p>可能你会觉得无从下手，因为相像有无数可能性，可以是15或者17，因为数值相近；可以是96或者4，因为是16的倍数或者都是偶数；还可以是2,4,16,32，因为都是2的幂次。那接着告诉你，除了16之外，还有8,2,64也在同一组，那么你觉得下一个可能的数是什么？我想很多人会由此推断出要找的数是2的幂次；而如果说23,19,20和16是同一组呢，那么可能会推断是想找数值相近的数。</p>
 <p>咋一看，这很显然。但细想，却会感到很玄妙。在很多情况下，只给了一个或少数几个例子，而且仅仅是正面例子，我们便可以从中学习、推断和做分类，这是一项神奇的能力，至少目前的机器学习算法还没有人类做得好。我们的大脑是怎么做到这一点的呢，这还要从Bayes，哦，不，Sheldon说起。</p>
 <h3>从Sheldon到Bayes定理</h3>
-<p><img alt="Sheldon" src="/images/bayesian.png"></p>
+<p><img alt="Sheldon" src="/images/bayesian.jpg"></p>
 <p>很多人都喜欢看《生活大爆炸》，欣赏里面Sheldon的绝顶聪明，上面的图片就出自《生活大爆炸》第四季第二集。里面的Sheldon非常担心，害怕自己不能活到技术“奇点”的出现，也就无法通过意识上传获得永生。他根据家族成员的寿命和疾病史等，预期自己还有六十年可以活。他是怎么做到的呢？用的就是黑板上的贝叶斯定理，也是今天要讲的主题。</p>
 <p>贝叶斯是18世纪英国的一位统计学家，他的生平事迹这里就不赘述，只需要知道他发现了这一定理的一种特别情况，后人因此用他名字给这一定理命名。这一定理初看起来是如此的显然和稀松平常，以致于初次遇见可能会忽视它。而细究之下，又会发现，它的内涵是如此丰富，不仅仅改变了我们对概率论的看法，并且我们的思维和决策本身也是基于其基础之上的，就像前面所讲的例子。</p>
 <p>在概率论中，设两个事件发生的概率分别是<span class="math">\(P(A)\)</span>和<span class="math">\(P(B)\)</span>，那么他们同时发生的概率<span class="math">\(P(A,B)\)</span>可以用两种方式计算，既可以表述为事件A发生的概率<span class="math">\(P(A)\)</span>乘以事件A发生时事件B也发生的概率（条件概率）<span class="math">\(P(B|A)\)</span>，也可以表述为事件B发生的概率<span class="math">\(P(B)\)</span>乘以事件B发生时事件A也发生的概率<span class="math">\(P(A|B)\)</span>，公式表达如下：</p>
@@ -88,13 +88,13 @@ styles, `#sidebar-checkbox` for behavior. -->
 <p>由此说开去，我们发现，不管是科学理论的建立还是发明创造，很多时候都是一条漫长曲折的寻找证据，并从证据中逐步抽象，建立起理论的道路。但在理论建立完备后，常常讲解的方式却是另外一种，高屋建瓴的、抽象的、预设的前提假设出发，一步步小心求证，最后得到结论，这一方式发挥到极致的学科便是数学。后一种方法我们称之为演绎推理deduction，而前一种更多的是归纳推理induction。对归纳推理的炉火纯青的应用，正是人类学习的很大一个优势。</p>
 <h3>认知的贝叶斯模型</h3>
 <p>回到开头提到的猜数字的游戏，有了贝叶斯定理的武装，我们便能更加理解在这一任务中，我们大脑到底发生了什么。这一例子出自Tenenbaum的博士论文，并被Murphy在《机器学习》<sup id="fnref-1"><a class="footnote-ref" href="#fn-1">1</a></sup>一书中使用，为了解释，我们截取Murphy书中的两张图：</p>
-<p><img alt="numGame" src="/images/post.png"></p>
+<p><img alt="numGame" src="/images/post.jpg"></p>
 <p>只给出数字16，为了猜测下一数字，我们会先做各种模型假设，例如上图中给出的那些。根据贝叶斯公式，每一种假设，我们都会有一个先验概率<span class="math">\(P(h_i)\)</span>，见最左边的图。它表示我们对这一假设的信念大小，例如把数字分成奇数偶数比较常见，于是我们把相应模型的先验概率设得比较大，而对于“都是2的幂次但排除32”这样的规则，我们会觉得很不“自然”，相应的会给予很小的概率。对模型的偏好来自于我们的先验知识，在两个一样解释力的模型中，我们会偏好更简单的模型，这就是经典的Occam剃刀原则。</p>
 <p>同样的，我们还需要知道对每一个既定假设，出现数字16的概率<span class="math">\(P(O|h_i)\)</span>，在我们的例子中，设假设<span class="math">\(h_i\)</span>允许出现的结果有<span class="math">\(|h_i|\)</span>种，那么每种结果出现的可能性便是：</p>
 <div class="math">$$P(O|h_i)=\frac{1}{|h_i|}$$</div>
 <p>每种假设的结果见中间的图。而最终对每种假设的信念便是两者的乘积，既要考虑到先验假设，也要考虑到似然概率。正如右边图中所显示的，对于”都是偶数“这样的假设，尽管先验概率比较大，但因为1到100间的偶数太多，出现16的概率仅1/50，如果恰恰出现了，我们会觉得是“惊人的巧合”，而不太会相信它是真的。这对应着贝叶斯版的Occam剃刀，在机器学习中，它化身为正则化项以防止模型过拟合。</p>
 <p>这样，我们就有了知道数字16后各模型的后验概率<span class="math">\(P(h_i|O)\)</span>,从中我们就可以选择概率最大的一个作为最大似然估计，图中，我们可以看到选出的模型是“都是4的幂次”。如果有更多的证据，模型便会快速收敛至真实情况。</p>
-<p><img alt="numGame" src="/images/numGame.png"></p>
+<p><img alt="numGame" src="/images/numGame.jpg"></p>
 <p>那么我们又是如何猜测下一个数字x的呢？我们已经有了每个模型的后验概率，下一个数字是x的概率就可以表示为每个模型的后验概率和相应模型出现x的概率的乘积的求和，俗称贝叶斯模型平均。表示为：</p>
 <div class="math">$$P(x|D)=\sum_iP(x|h_i)P(h_i|D)$$</div>
 <p>上面图中各条线上的点便表示各模型假设允许出现的结果，而右侧的曲线表示各模型的后验概率，综合起来，就会得到图中上部所示的x的概率分布。可以看到，与我们料想的非常一致。</p>
