--- a/bei-xie-si-da-nao.html
+++ b/bei-xie-si-da-nao.html
@@ -98,7 +98,7 @@ styles, `#sidebar-checkbox` for behavior. -->
 <p>那么我们又是如何猜测下一个数字x的呢？我们已经有了每个模型的后验概率，下一个数字是x的概率就可以表示为每个模型的后验概率和相应模型出现x的概率的乘积的求和，俗称贝叶斯模型平均。表示为：</p>
 <div class="math">$$P(x|D)=\sum_iP(x|h_i)P(h_i|D)$$</div>
 <p>上面图中各条线上的点便表示各模型假设允许出现的结果，而右侧的曲线表示各模型的后验概率，综合起来，就会得到图中上部所示的x的概率分布。可以看到，与我们料想的非常一致。</p>
-<p>我们再看大脑推断中用到贝叶斯定理的两个例子。第一个例子同样来自Tenenbaum的论文[^2]，说的不仅仅是我们如何学习单个概念，还说明了我们是如何将概念对应到事物的不同范畴的。当指着一张标记为fep的达尔马提亚狗图片，来猜测fep的含义时，我们既可以认为fep表示上位范畴的动物，表示基本范畴的狗，也可以是表示下位范畴的达尔马提亚狗。而我们会倾向于推断fep的意思是狗。这是由基本范畴偏差（prior)造成的，因为我们日常处理事物大多都在基本范畴，这也是为什么基本范畴的中英文单词大多非常简单且长度很短。但当给了三张达尔马提亚狗的图片，而且每张都标记为fep的时候，我们却更可能推断fep意思是达尔马提亚狗而不是所有的狗。因为直观上来讲，如果fep表示的是所有的狗，但随机抽取的三个样本都是达尔马提亚狗，那将是“惊人的巧合”。</p>
+<p>我们再看大脑推断中用到贝叶斯定理的两个例子。第一个例子同样来自Tenenbaum的论文<sup id="fnref-2"><a class="footnote-ref" href="#fn-2">2</a></sup>，说的不仅仅是我们如何学习单个概念，还说明了我们是如何将概念对应到事物的不同范畴的。当指着一张标记为fep的达尔马提亚狗图片，来猜测fep的含义时，我们既可以认为fep表示上位范畴的动物，表示基本范畴的狗，也可以是表示下位范畴的达尔马提亚狗。而我们会倾向于推断fep的意思是狗。这是由基本范畴偏差（prior)造成的，因为我们日常处理事物大多都在基本范畴，这也是为什么基本范畴的中英文单词大多非常简单且长度很短。但当给了三张达尔马提亚狗的图片，而且每张都标记为fep的时候，我们却更可能推断fep意思是达尔马提亚狗而不是所有的狗。因为直观上来讲，如果fep表示的是所有的狗，但随机抽取的三个样本都是达尔马提亚狗，那将是“惊人的巧合”。</p>
 <p>第二个例子来自刘未鹏的《暗时间》，里面提到了一个自然语言的二义性例子。</p>
 <blockquote>
 <p>the girl saw the boy with a telescope.</p>
@@ -142,8 +142,8 @@ styles, `#sidebar-checkbox` for behavior. -->
 <li id="fn-1">
 <p>Murphy, K. P. (2012). <em>Machine Learning: A Probabilistic Perspective</em> (1 edition). Cambridge, MA: The MIT Press.&#160;<a class="footnote-backref" href="#fnref-1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
-<li id="fn- 2">
-<p>Xu, F., &amp; Tenenbaum, J. B. (2007). Word learning as Bayesian inference. <em>Psychological Review</em>, <em>114</em>(2), 245.&#160;<a class="footnote-backref" href="#fnref- 2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
+<li id="fn-2">
+<p>Xu, F., &amp; Tenenbaum, J. B. (2007). Word learning as Bayesian inference. <em>Psychological Review</em>, <em>114</em>(2), 245.&#160;<a class="footnote-backref" href="#fnref-2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
 <li id="fn-3">
 <p><a href="https://zh.wikipedia.org/wiki/%E8%B3%AD%E5%BE%92%E8%AC%AC%E8%AA%A4">维基百科：赌徒谬误</a>&#160;<a class="footnote-backref" href="#fnref-3" title="Jump back to footnote 3 in the text">&#8617;</a></p>
