--- a/bei-xie-si-da-nao.html
+++ b/bei-xie-si-da-nao.html
@@ -102,7 +102,10 @@ styles, `#sidebar-checkbox` for behavior. -->
 <p>那么我们又是如何猜测下一个数字x的呢？我们已经有了每个模型的后验概率，下一个数字是x的概率就可以表示为每个模型的后验概率和相应模型出现x的概率的乘积的求和，俗称贝叶斯模型平均。表示为：</p>
 <div class="math">$$P(x|D)=\sum_iP(x|h_i)P(h_i|D)$$</div>
 <p>这一计算过程漂亮的反映在上图中。中间那一大块图纵轴表示各种可能假设，而每条横线表示1到100的数值区间，那么每条线上的点便表示各模型假设允许出现的数值。可以看到假设“all"的横线布满了点，因为从1到100，它每个数都可以取到。我们再看图的右边那条曲线，它表示的便是给定数值16后各模型的后验概率分布，可以看到，假设”都是4的幂次“的后验概率最大。将两者结合并叠加起来，就会得到图中上部所示的x的概率分布。可以看到，数字16,64,4的概率最大，与我们料想的非常一致。</p>
-<p><img alt="numGame" src="/images/Dalmatian.jpg"></p>
+<div align=center>
+<img src="/images/Dalmatian.jpg" alt="Dalmatian"/>
+</div>
+
 <p>我们再看大脑推断中用到贝叶斯的两个例子。第一个例子同样来自Tenenbaum的论文<sup id="fnref-2"><a class="footnote-ref" href="#fn-2">2</a></sup>，说的不仅仅是我们如何学习单个概念，还说明了我们是如何将概念对应到事物的不同范畴的。所谓范畴，就是对事物的分类，并且这种分类通常是有不同层次的。例如你的写字桌，它既属于写字桌这一类，也属于桌子这一类，还属于家具这一类，在范畴论中，它分别可以对应着下位范畴、基本范畴和上位范畴。在Tenenbaum论文的例子中，当指着一张标记为fep的斑点狗图片，来猜测fep的含义时，我们既可以认为fep表示上位范畴的动物，表示基本范畴的狗，也可以是表示下位范畴的斑点狗。而我们会倾向于推断fep的意思是狗。这是由基本范畴偏差（prior)造成的，因为我们日常处理事物大多都在基本范畴，这也是为什么基本范畴的中英文单词大多非常简单且长度很短。但当给了三张斑点狗的图片，而且每张都标记为fep的时候，我们却更可能推断fep意思是斑点狗而不是所有的狗。因为直观上来讲，如果fep表示的是所有的狗，但随机抽取的三个样本都是斑点狗，那将是“惊人的巧合”。</p>
 <p>第二个例子来自刘未鹏的《暗时间》，里面提到了一个自然语言的二义性例子。</p>
 <blockquote>
